# OdysseyOS

kernel/: Cargo.toml  GNUmakefile  mod.rs
kernel/.cargo/: config.toml
kernel/kernel/: Cargo.toml
kernel/kernel/src/: main.rs  panic.rs
kernel/kernel/src/memory/: palloc.rs
kernel/kernel/tests/: palloc_one.rs
kernel/lib/kernel-log/: Cargo.toml
kernel/lib/kernel-test/src/: lib.rs
kernel/lib/metamorphoses/src/: bitmap.rs
